# endless-terminals

./: .gitignore  README.md  aicore_agent.py  aicore_llm.py  aicore_llm_access.py  generate_harbor_solutions.py  generate_harbor_tasks.py  pyproject.toml  pytest.ini
app/: data.py  server.py
app/static/: app.css  app.js
app/templates/: base.html  index.html  run.html  runs.html  task.html  tasks.html  trial.html
data/: train.parquet  validation.parquet
generator/: aicore_batch.py  dockerfile_gen.py  task_template_gen.py
generator/convert_to_harbor/: README.md
generator/sap_cap/: __init__.py  container_setup.py  requirements.txt  task_templates.py  test_generators.py
harbor_jobs_aicore/2026-04-15__16-35-22/: aggregate_pass_at_k.json  config.json  result.json
harbor_jobs_aicore_new/2026-04-21__00-07-43/: config.json  result.json
harbor_jobs_aicore_sonnet/2026-04-20__19-43-30/: config.json  result.json
harbor_tasks/task_000000_0b20fa4e/: instruction.md
harbor_tasks/task_000000_0b4a9644/: instruction.md
harbor_tasks/task_000000_0b892b34/: instruction.md
harbor_tasks/task_000000_0ea7be88/: instruction.md
harbor_tasks/task_000000_0f280868/: instruction.md
harbor_tasks/task_000000_14e680f0/: instruction.md
harbor_tasks/task_000000_16607b06/: instruction.md
harbor_tasks/task_000000_177169b6/: instruction.md
harbor_tasks/task_000000_17a04f94/: instruction.md
harbor_tasks/task_000000_1a651e4c/: instruction.md
harbor_tasks/task_000000_1c8c96e7/: instruction.md
harbor_tasks/task_000000_2268a271/: instruction.md
harbor_tasks/task_000000_249c6319/: instruction.md
harbor_tasks/task_000000_24a6cc9c/: instruction.md
harbor_tasks/task_000000_2884808f/: instruction.md
harbor_tasks/task_000000_2bd32aff/: instruction.md
harbor_tasks/task_000000_30a3bd88/: instruction.md
harbor_tasks/task_000000_31c5d8d7/: instruction.md
harbor_tasks/task_000000_3229f5e5/: instruction.md
harbor_tasks/task_000000_3294be7a/: instruction.md
harbor_tasks/task_000000_33870ccf/: task.toml  (+1 more)
scripts/: check_final_tests_initial_state.sh  run_tests.sh
tests/: README.md  conftest.py  test_harbor_conversion.py  test_sap_cap_generation.py
(+15080 files in other folders)
